[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Menu/menu-box-370x96.png" type="Texture" id=1]
[ext_resource path="res://misc/line-text-64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Arcade/Scripts/Parts/Settings-Temp-Top_Menu_Select.gd" type="Script" id=3]

[node name="Top_Menu_Select" type="Node2D"]
script = ExtResource( 3 )
selection_color = Color( 0, 0, 1, 1 )

[node name="Back" type="Node2D" parent="."]

[node name="Menu-box-370X96_01" type="Sprite" parent="Back"]
position = Vector2( 225, 208 )
texture = ExtResource( 1 )
hframes = 5
frame = 2

[node name="Menu-box-370X96_02" type="Sprite" parent="Back"]
position = Vector2( 595, 208 )
texture = ExtResource( 1 )
hframes = 5
frame = 2

[node name="Menu-box-370X96_03" type="Sprite" parent="Back"]
position = Vector2( 965, 208 )
texture = ExtResource( 1 )
hframes = 5
frame = 2

[node name="Menu-box-370X96_04" type="Sprite" parent="Back"]
position = Vector2( 1335, 208 )
texture = ExtResource( 1 )
hframes = 5
frame = 2

[node name="Menu-box-370X96_05" type="Sprite" parent="Back"]
position = Vector2( 1705, 208 )
texture = ExtResource( 1 )
hframes = 5
frame = 2

[node name="Selection" type="Node2D" parent="."]

[node name="Menu-box-370X96_01" type="Sprite" parent="Selection"]
position = Vector2( 225, 208 )
texture = ExtResource( 1 )
hframes = 5

[node name="Menu-box-370X96_02" type="Sprite" parent="Selection"]
position = Vector2( 595, 208 )
texture = ExtResource( 1 )
hframes = 5

[node name="Menu-box-370X96_03" type="Sprite" parent="Selection"]
position = Vector2( 965, 208 )
texture = ExtResource( 1 )
hframes = 5

[node name="Menu-box-370X96_04" type="Sprite" parent="Selection"]
position = Vector2( 1335, 208 )
texture = ExtResource( 1 )
hframes = 5

[node name="Menu-box-370X96_05" type="Sprite" parent="Selection"]
position = Vector2( 1705, 208 )
texture = ExtResource( 1 )
hframes = 5

[node name="Labels" type="Node2D" parent="."]

[node name="Label_01" type="Label" parent="Labels"]
margin_left = 170.0
margin_top = 170.0
margin_right = 273.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 2 )
text = "V.S."

[node name="Label_02" type="Label" parent="Labels"]
margin_left = 450.0
margin_top = 170.0
margin_right = 736.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 2 )
text = "Campaign"

[node name="Label_03" type="Label" parent="Labels"]
margin_left = 870.0
margin_top = 170.0
margin_right = 1156.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 2 )
text = "Audio"

[node name="Label_04" type="Label" parent="Labels"]
margin_left = 1250.0
margin_top = 170.0
margin_right = 1536.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 2 )
text = "Video"

[node name="Label_05" type="Label" parent="Labels"]
margin_left = 1540.0
margin_top = 170.0
margin_right = 1876.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 2 )
text = "Placehold"
